# m8_math_foundataion_of_cs

./: 02-bisection_method.py  04-compare_root_finding.py  05-bisection_heurisitics.py  Calculus101.md  README.md  main.py  pyproject.toml  test_algorithms.py
sample/: sample_1d_gd.py  sample_multi_dim_gd.py
src/: 01-approximate_area.py  02-bisection_method.py  03-fixed_point_iter.py  04-compare_root_finding.py  05-bisection_heurisitics.py  06-gauss_elimination.py  06-output.txt  07-gauss_benchmark.py  07-output.txt  08-jacobi_iter.py  08-output.txt  09-seidel_iter.py  10-polynomial.ipynb  12-param_fn.ipynb  __init__.py  app.py  approx_dist.ipynb  aprox.ipynb  gd_for_lin_regr.py  gradient-descent.ipynb  gradient_descent.py  hw-root_finding.ipynb  hw-sle.ipynb  page_rank.ipynb  sobel_demo_v1.ipynb  sobel_demo_v1_spline.ipynb  utils.py
src/cubic_spline/: spline.ipynb
src/grad_descent/: gd_for_lin_regr_1D.py  gd_for_lin_regr_2D.py  gd_for_lina_regr.ipynb  gd_in_R3.ipynb  gradient-descent.ipynb  milti_linear_regr.py  multi_linear_regr_gd.ipynb  multivariate_linear_regression.py  test_multivar.py
src/locate_battleships/: locate_battleship.ipynb
src/regression/: lin_regr.ipynb
static/css/: style.css
static/html/: index.html
static/js/: app.js
