[project]
name = "m8-math-foundataion-of-cs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]
